# FlashFind

./: .gitignore  README.md  package-lock.json  package.json
.zed/: debug.json  tasks.json
src/: App.tsx
src-python/: markitdown_sidecar.py  markitdown_sidecar.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/parser/: Cargo.toml
src-tauri/crates/parser/src/: lib.rs  parser.rs
src-tauri/crates/pipeline/: Cargo.toml
src-tauri/crates/pipeline/src/: lib.rs  pipeline.rs
src-tauri/crates/qdrant/: Cargo.toml
src-tauri/crates/qdrant/src/: lib.rs  qdrant.rs
src-tauri/crates/sqlite/: Cargo.toml
src-tauri/crates/sqlite/src/: lib.rs  sqlite.rs
src-tauri/crates/treesitter/: Cargo.toml
src-tauri/crates/treesitter/src/: extractor.rs  lib.rs  treesitter.rs
src-tauri/permissions/: pipeline.json
src-tauri/src/: lib.rs  main.rs
src/components/Search/: ExtensionFilter.tsx  SearchBox.tsx  SearchResults.tsx  index.tsx
src/components/Sidebar/: AddDirectoryButton.tsx  DirectoryList.tsx  index.tsx
